unpackaged/objects/Territory2.object
<CustomObject>
  <fields>
    <fullName>NumberOfChar__c</fullName>
    <formula>Len(DeveloperName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NumberOfChar</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
  </fields>
  <fields>
    <fullName>Primary_Territory_for_User__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Primary Territory for User</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Region_Name_POC__c</fullName>
    <label>Region Name (POC)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>SBU_POC__c</fullName>
    <label>SBU (POC)</label>
    <length>255</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Territory_Code__c</fullName>
    <description>Used to designate the territory code. Must be unique across our org. In North America - Used to match to the ERP User ID of a user to determine the primary territory of a User in the event of multiple territory assignments. This is used primarily for OBIEE reporting.</description>
    <externalId>true</externalId>
    <label>Territory Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
  </fields>
  <fields>
    <fullName>Territory_Division__c</fullName>
    <description>Used by the North America Team to support OBIEE Reporting</description>
    <label>Territory Division</label>
    <type>Picklist</type>
    <valueSet>
      <valueSetDefinition>
        <sorted>true</sorted>
        <value>
          <fullName>3D Imaging</fullName>
        </value>
        <value>
          <fullName>Alliance</fullName>
        </value>
        <value>
          <fullName>CAD CAM</fullName>
        </value>
        <value>
          <fullName>Canada</fullName>
        </value>
        <value>
          <fullName>Celtra/Cerec Consumables</fullName>
        </value>
        <value>
          <fullName>CEREC Equipment</fullName>
        </value>
        <value>
          <fullName>Chairside</fullName>
        </value>
        <value>
          <fullName>Clinical Implementation Specialist</fullName>
        </value>
        <value>
          <fullName>Distribution</fullName>
        </value>
        <value>
          <fullName>DS Lab</fullName>
        </value>
        <value>
          <fullName>Endodontics</fullName>
        </value>
        <value>
          <fullName>Extra Oral</fullName>
        </value>
        <value>
          <fullName>Government</fullName>
        </value>
        <value>
          <fullName>Hygiene</fullName>
        </value>
        <value>
          <fullName>Imaging</fullName>
        </value>
        <value>
          <fullName>Implants + MIS</fullName>
        </value>
        <value>
          <fullName>Implants Clinical</fullName>
        </value>
        <value>
          <fullName>Implants Digital</fullName>
        </value>
        <value>
          <fullName>Implants MIS</fullName>
        </value>
        <value>
          <fullName>inLab</fullName>
        </value>
        <value>
          <fullName>Inside Sales</fullName>
        </value>
        <value>
          <fullName>Inside Sales Preventive and Restorative</fullName>
        </value>
        <value>
          <fullName>Inside Sales Prosthetics</fullName>
        </value>
        <value>
          <fullName>Institutional</fullName>
        </value>
        <value>
          <fullName>Intra Oral</fullName>
        </value>
        <value>
          <fullName>Lab</fullName>
        </value>
        <value>
          <fullName>Maillefer</fullName>
        </value>
        <value>
          <fullName>Midwest</fullName>
        </value>
        <value>
          <fullName>National Accounts</fullName>
        </value>
        <value>
          <fullName>Orthodontics</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
  <fields>
    <fullName>Territory_Legacy_ID__c</fullName>
    <label>Territory Legacy ID</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Territory_Level__c</fullName>
    <label>Territory Level</label>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetDefinition>
        <value>
          <fullName>Country</fullName>
        </value>
        <value>
          <fullName>Region</fullName>
        </value>
        <value>
          <fullName>SBU</fullName>
        </value>
        <value>
          <fullName>Sales Rep</fullName>
        </value>
      </valueSetDefinition>
    </valueSet>
  </fields>
</CustomObject>